atualiza swagger
